--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title></title>
-  <link rel="stylesheet" type="text/css" href="bower_components/highlightjs/styles/default.css">
+  <link rel="stylesheet" type="text/css" href="highlight.js-master/src/styles/default.css">
   <script type="text/javascript" src="highlight.js-master/src/highlight.js"></script>
 
 </head>
